--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
                             <li><a href="#" class="social-icons"><i class="icon-social-twitter"></i></a></li>
                             <li><a href="#" class="social-icons"><i class="icon-social-google"></i></a></li>
                             <li><a href="#" class="social-icons"><i class="icon-social-linkedin"></i></a></li>
+                            <li><a href="https://github.com/thanakritv8" class="social-icons"><i class="icon-social-github"></i></a></li>
                         </ul>
                     </div>
                 </div>
