Portfolio by Thung

--- a/index.html
+++ b/index.html
@@ -294,6 +294,14 @@
                             <div class="text-right sm-text-left">
                                 <h2 class="margin-b-0">Works</h2>
                                 <p>I build the real value.</p>
+                                <p>
+                                    <button type="button" class="btn btn-default">Windows Application</button>  <!--Internet cafe, Stock, Information, TV Show,  Monitor, ....etc.-->
+                                    <button type="button" class="btn btn-default">Android Application</button>  <!--Room management, SMS Alarm-->
+                                    <button type="button" class="btn btn-default">Web Application</button>  <!--Vtcc.org, KPTWW, Resume-->
+                                    <button type="button" class="btn btn-default">RDC2013 Regional</button> <!--RDC2013 Regional-->
+                                    <button type="button" class="btn btn-default">RDC2013 Nationally</button>  <!--RDC2013 Nationally-->
+                                    <button type="button" class="btn btn-default">Project</button>  <!--Room management-->
+                                </p>
                             </div>
                         </div>
                         <div class="col-sm-8 col-sm-offset-1">
