add detail portfolio by Thung

--- a/index.html
+++ b/index.html
@@ -285,7 +285,8 @@
                                     <button type="button" class="btn btn-default" data-filter="*">All Projects</button>
                                     <button type="button" class="btn btn-default" data-filter=".winapp">Windows Application</button>
                                     <button type="button" class="btn btn-default" data-filter=".andapp">Android Application</button>
-                                    <button type="button" class="btn btn-default" data-filter=".webapp">Web Application</button>                                 
+                                    <button type="button" class="btn btn-default" data-filter=".webapp">Web Application</button>
+                                    <button type="button" class="btn btn-default" data-filter=".webapp">Pocket PC</button>                                  
                                     <button type="button" class="btn btn-default" data-filter=".micro">Microcontroller</button>
                                     <button type="button" class="btn btn-default" data-filter=".maintenance">Maintenance</button>                                  
                                 </div>                               
@@ -295,12 +296,12 @@
                             <!-- Masonry Grid -->
                             <div class="masonry-grid  row row-space-2">
                                 <div class="masonry-grid-sizer col-xs-6 col-sm-6 col-md-1"></div>
-                                <!--Windows Application-->
+                                <!--------------------------------------------------------Windows Application------------------------------------------------------------>
                                 <div class="masonry-grid-item col-xs-12 col-sm-6 col-md-4 margin-b-4 element-item winapp" data-category="winapp">
                                     <!-- Work -->
                                     <div class="work work-popup-trigger">
                                         <div class="work-overlay">
-                                            <img class="full-width img-responsive" src="img/work/winapp/planning.png" alt="Portfolio Image">
+                                            <img class="full-width img-responsive" src="img/work/winapp/planning.png" alt="Portfolio Image">                                            
                                         </div>                                        
                                         <div class="work-popup-overlay">
                                             <div class="work-popup-content">
@@ -312,7 +313,25 @@
                                                 <div class="row">
                                                     <div class="col-sm-8 work-popup-content-divider sm-margin-b-20">
                                                         <div class="margin-t-10 sm-margin-t-0">
-                                                            <img class="full-width img-responsive" src="img/work/winapp/planning.png" alt="Portfolio Image">
+                                                            <div class="row">
+                                                                <div class="col-sm-4 sm-margin-b-20">
+                                                                    <img class="full-width img-responsive" src="img/work/winapp/account.png" alt="Portfolio Image">
+                                                                </div>
+                                                                <div class="col-sm-4 sm-margin-b-20">
+                                                                    <img class="full-width img-responsive" src="img/work/winapp/schbs.png" alt="Portfolio Image">
+                                                                </div>
+                                                                <div class="col-sm-4 sm-margin-b-20">
+                                                                    <img class="full-width img-responsive" src="img/work/winapp/vnc.png" alt="Portfolio Image">
+                                                                </div>
+                                                            </div>
+                                                            <div class="row">
+                                                                <div class="col-sm-6 sm-margin-b-20">
+                                                                    <img class="full-width img-responsive" src="img/work/winapp/sumQC.png" alt="Portfolio Image">
+                                                                </div>
+                                                                <div class="col-sm-6 sm-margin-b-20">
+                                                                    <img class="full-width img-responsive" src="img/work/winapp/repairQC.png" alt="Portfolio Image">
+                                                                </div>
+                                                            </div>                                                            
                                                             <p>It is a program to control tire production and tire data. The program can set user permissions, control the machine shutdown, set the working standard, check the production balance.</p>                                                            
                                                         </div>
                                                     </div>
@@ -380,7 +399,14 @@
                                                 <div class="row">
                                                     <div class="col-sm-8 work-popup-content-divider sm-margin-b-20">
                                                         <div class="margin-t-10 sm-margin-t-0">
-                                                            <img class="full-width img-responsive" src="img/work/winapp/monitor.png" alt="Portfolio Image">
+                                                            <div class="row">
+                                                                <div class="col-sm-6 sm-margin-b-20">
+                                                                    <img class="full-width img-responsive" src="img/work/winapp/scanbarcode.png" alt="Portfolio Image">
+                                                                </div>
+                                                                <div class="col-sm-6 sm-margin-b-20">
+                                                                    <img class="full-width img-responsive" src="img/work/winapp/ufdb.png" alt="Portfolio Image">
+                                                                </div>
+                                                            </div>                                                            
                                                             <p>It is a program to control tire production and tire data. The program can set user permissions, control the machine shutdown, set the working standard, check the production balance.</p>
                                                         </div>
                                                     </div>
@@ -397,6 +423,7 @@
                                     </div>
                                     <!-- End Work -->
                                 </div>
+                                <!----------------------------------------------------------------------End Windows Application------------------------------------------------------------------>  
 
                                 <div class="masonry-grid-item col-xs-12 col-sm-6 col-md-4 margin-b-4 element-item webapp" data-category="webapp">
                                     <!-- Work -->
@@ -493,7 +520,7 @@
                                     </div>
                                     <!-- End Work -->
                                 </div> 
-                                <!--End Windows Application-->                                
+                                                              
                             </div>
                             <!-- End Masonry Grid -->
                         </div>
