Add picture by Thung

--- a/index.html
+++ b/index.html
@@ -586,7 +586,7 @@
                                 <div class="masonry-grid-item col-xs-12 col-sm-6 col-md-4 margin-b-4 element-item winapp" data-category="winapp">
                                     <div class="work work-popup-trigger">
                                         <div class="work-overlay">
-                                            <img class="full-width img-responsive" src="img/work/winapp/monitor.png" alt="Portfolio Image">
+                                            <img class="full-width img-responsive" src="img/work/stock/s1.png" alt="Portfolio Image">
                                         </div>
                                         <div class="work-popup-overlay">
                                             <div class="work-popup-content">
@@ -600,14 +600,21 @@
                                                         <div class="margin-t-10 sm-margin-t-0">
                                                             <div class="row">
                                                                 <div class="col-sm-6 sm-margin-b-20">
-                                                                    <img class="full-width img-responsive" src="img/work/winapp/scanbarcode.png" alt="Portfolio Image">
+                                                                    <img class="full-width img-responsive" src="img/work/stock/s1.png" alt="Portfolio Image">
                                                                 </div>
                                                                 <div class="col-sm-6 sm-margin-b-20">
-                                                                    <img class="full-width img-responsive" src="img/work/winapp/ufdb.png" alt="Portfolio Image">
+                                                                    <img class="full-width img-responsive" src="img/work/stock/s2.png" alt="Portfolio Image">
+                                                                </div>
+                                                            </div>
+                                                            <div class="row">
+                                                                <div class="col-sm-6 sm-margin-b-20">
+                                                                    <img class="full-width img-responsive" src="img/work/stock/s3.png" alt="Portfolio Image">
+                                                                </div>
+                                                                <div class="col-sm-6 sm-margin-b-20">
+                                                                    <img class="full-width img-responsive" src="img/work/stock/s4.png" alt="Portfolio Image">
                                                                 </div>
                                                             </div>                                                            
-                                                            <p>The program that allows users to check that now compound rubber Left in stock and user can control the production process to meet the demand of the production.</p>
-                                                        
+                                                            <p>The program that allows users to check that now compound rubber Left in stock and user can control the production process to meet the demand of the production.</p>                                                   
                                                         </div>
                                                     </div>
                                                     <div class="col-sm-4">
@@ -628,7 +635,7 @@
                                 <div class="masonry-grid-item col-xs-12 col-sm-6 col-md-4 margin-b-4 element-item winapp" data-category="winapp">
                                     <div class="work work-popup-trigger">
                                         <div class="work-overlay">
-                                            <img class="full-width img-responsive" src="img/work/winapp/monitor.png" alt="Portfolio Image">
+                                            <img class="full-width img-responsive" src="img/work/vnc/vnc.png" alt="Portfolio Image">
                                         </div>
                                         <div class="work-popup-overlay">
                                             <div class="work-popup-content">
@@ -640,14 +647,9 @@
                                                 <div class="row">
                                                     <div class="col-sm-8 work-popup-content-divider sm-margin-b-20">
                                                         <div class="margin-t-10 sm-margin-t-0">
-                                                            <div class="row">
-                                                                <div class="col-sm-6 sm-margin-b-20">
-                                                                    <img class="full-width img-responsive" src="img/work/winapp/scanbarcode.png" alt="Portfolio Image">
-                                                                </div>
-                                                                <div class="col-sm-6 sm-margin-b-20">
-                                                                    <img class="full-width img-responsive" src="img/work/winapp/ufdb.png" alt="Portfolio Image">
-                                                                </div>
-                                                            </div>                                                            
+                                                            <div class="col-sm-6 sm-margin-b-20">
+                                                                <img class="full-width img-responsive" src="img/work/vnc/vnc.png" alt="Portfolio Image">
+                                                            </div>                                                          
                                                             <p>The program that users can remote to computer want to reduce the time to work, for example restart program monitor at in server room in case of program happen problem</p>                                                        
                                                         </div>
                                                     </div>
@@ -669,7 +671,7 @@
                                 <div class="masonry-grid-item col-xs-12 col-sm-6 col-md-4 margin-b-4 element-item winapp" data-category="winapp">
                                     <div class="work work-popup-trigger">
                                         <div class="work-overlay">
-                                            <img class="full-width img-responsive" src="img/work/winapp/monitor.png" alt="Portfolio Image">
+                                            <img class="full-width img-responsive" src="img/work/cnc/cnc.png" alt="Portfolio Image">
                                         </div>
                                         <div class="work-popup-overlay">
                                             <div class="work-popup-content">
@@ -683,10 +685,10 @@
                                                         <div class="margin-t-10 sm-margin-t-0">
                                                             <div class="row">
                                                                 <div class="col-sm-6 sm-margin-b-20">
-                                                                    <img class="full-width img-responsive" src="img/work/winapp/scanbarcode.png" alt="Portfolio Image">
+                                                                    <img class="full-width img-responsive" src="img/work/cnc/cnc.png" alt="Portfolio Image">
                                                                 </div>
                                                                 <div class="col-sm-6 sm-margin-b-20">
-                                                                    <img class="full-width img-responsive" src="img/work/winapp/ufdb.png" alt="Portfolio Image">
+                                                                    <img class="full-width img-responsive" src="img/work/cnc/cnc1.png" alt="Portfolio Image">
                                                                 </div>
                                                             </div>                                                            
                                                             <p>The program is used to plan the machine CNC to keep the machine running efficiently.</p>
@@ -807,10 +809,10 @@
                                                     <div class="col-sm-8 work-popup-content-divider sm-margin-b-20">
                                                         <div class="row">
                                                             <div class="col-sm-6 sm-margin-b-20">
-                                                                <img class="full-width img-responsive" src="img/work/winapp/scanbarcode.png" alt="Portfolio Image">
+                                                                <img class="full-width img-responsive" src="img/work/winapp/kptmenu.png" alt="Portfolio Image">
                                                             </div>
                                                             <div class="col-sm-6 sm-margin-b-20">
-                                                                <img class="full-width img-responsive" src="img/work/winapp/ufdb.png" alt="Portfolio Image">
+                                                                <img class="full-width img-responsive" src="img/work/winapp/kptstock.png" alt="Portfolio Image">
                                                             </div>
                                                         </div>                                                            
                                                         <p>The web is used within the organization to facilitate the employees will have many systems, for example Leave Online System, Stock equipment, CCTV, Email, Training, HR etc.</p>                                                        
